MAJOR CHANGE: now able to read and treat properly HETATMS and nucleotides from PDB entries. All tests pass. Anyway surely there will be some bugs to iron out still.